--- a/CBIR_SearchEngine/Base.lproj/Main.storyboard
+++ b/CBIR_SearchEngine/Base.lproj/Main.storyboard
@@ -29,32 +29,38 @@
                                 </constraints>
                             </imageView>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ozD-FQ-3Jh">
-                                <rect key="frame" x="0.0" y="527" width="375" height="140"/>
+                                <rect key="frame" x="8" y="667" width="359" height="300"/>
                                 <subviews>
-                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="search" translatesAutoresizingMaskIntoConstraints="NO" id="2TG-xz-lfi">
+                                    <imageView contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="search" translatesAutoresizingMaskIntoConstraints="NO" id="2TG-xz-lfi">
                                         <rect key="frame" x="50" y="30" width="80" height="80"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="80" id="MOa-2z-HGc"/>
                                             <constraint firstAttribute="height" constant="80" id="tmv-6C-LIL"/>
                                         </constraints>
                                     </imageView>
-                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="upload" translatesAutoresizingMaskIntoConstraints="NO" id="JIt-69-0LB">
-                                        <rect key="frame" x="245" y="30" width="80" height="80"/>
+                                    <imageView contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="upload" translatesAutoresizingMaskIntoConstraints="NO" id="JIt-69-0LB">
+                                        <rect key="frame" x="229" y="30" width="80" height="80"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="80" id="Die-m0-6tJ"/>
                                             <constraint firstAttribute="width" constant="80" id="ZaG-Si-dJf"/>
                                         </constraints>
                                     </imageView>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="添加本地相册为搜索源" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bYg-cm-Zei">
-                                        <rect key="frame" x="223" y="112" width="133" height="21"/>
-                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="添加本地搜索源" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bYg-cm-Zei">
+                                        <rect key="frame" x="209" y="112" width="120" height="30"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="30" id="atG-2h-zEo"/>
+                                            <constraint firstAttribute="width" constant="120" id="eQd-IK-0hX"/>
+                                        </constraints>
                                         <fontDescription key="fontDescription" type="system" pointSize="13"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="选择搜索目标图片" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nlC-oq-JRg">
-                                        <rect key="frame" x="37" y="111" width="119" height="21"/>
-                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="选择搜索目标图片" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nlC-oq-JRg">
+                                        <rect key="frame" x="30" y="111" width="120" height="30"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="120" id="5tU-1r-yEt"/>
+                                            <constraint firstAttribute="height" constant="30" id="cqF-vO-wmi"/>
+                                        </constraints>
                                         <fontDescription key="fontDescription" type="system" pointSize="13"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
@@ -62,24 +68,33 @@
                                 </subviews>
                                 <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="140" id="G5Y-OJ-XUg"/>
-                                    <constraint firstItem="2TG-xz-lfi" firstAttribute="centerY" secondItem="ozD-FQ-3Jh" secondAttribute="centerY" id="Ibb-tB-jBf"/>
+                                    <constraint firstItem="JIt-69-0LB" firstAttribute="top" secondItem="ozD-FQ-3Jh" secondAttribute="top" constant="30" id="4iT-Yn-NAO"/>
+                                    <constraint firstAttribute="height" constant="300" id="G5Y-OJ-XUg"/>
+                                    <constraint firstItem="nlC-oq-JRg" firstAttribute="top" secondItem="2TG-xz-lfi" secondAttribute="bottom" constant="1" id="Ogv-r3-Lt6"/>
+                                    <constraint firstItem="2TG-xz-lfi" firstAttribute="top" secondItem="ozD-FQ-3Jh" secondAttribute="top" constant="30" id="ccv-sW-r2H"/>
+                                    <constraint firstItem="bYg-cm-Zei" firstAttribute="centerX" secondItem="JIt-69-0LB" secondAttribute="centerX" id="dOV-0G-QEp"/>
                                     <constraint firstAttribute="trailing" secondItem="JIt-69-0LB" secondAttribute="trailing" constant="50" id="g2r-hB-omm"/>
-                                    <constraint firstItem="JIt-69-0LB" firstAttribute="centerY" secondItem="ozD-FQ-3Jh" secondAttribute="centerY" id="onU-pH-5pl"/>
+                                    <constraint firstItem="nlC-oq-JRg" firstAttribute="centerX" secondItem="2TG-xz-lfi" secondAttribute="centerX" id="nMW-6v-Cdh"/>
                                     <constraint firstItem="2TG-xz-lfi" firstAttribute="leading" secondItem="ozD-FQ-3Jh" secondAttribute="leading" constant="50" id="tqz-Q9-WIv"/>
+                                    <constraint firstItem="bYg-cm-Zei" firstAttribute="top" secondItem="JIt-69-0LB" secondAttribute="bottom" constant="2" id="xke-EQ-QCa"/>
                                 </constraints>
                             </view>
-                            <progressView opaque="NO" alpha="0.0" contentMode="scaleToFill" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="YnE-fu-EhY">
-                                <rect key="frame" x="120" y="446" width="150" height="2"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <progressView opaque="NO" alpha="0.0" contentMode="scaleToFill" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="YnE-fu-EhY">
+                                <rect key="frame" x="113" y="446" width="150" height="2"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="2" id="Sts-HA-5K2"/>
+                                    <constraint firstAttribute="width" constant="150" id="gjB-Lz-szx"/>
+                                </constraints>
                             </progressView>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="eAY-AY-EEX" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="3VV-2B-L6l"/>
-                            <constraint firstItem="ozD-FQ-3Jh" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="IOc-D5-hyC"/>
-                            <constraint firstAttribute="trailing" secondItem="ozD-FQ-3Jh" secondAttribute="trailing" id="Lhf-O0-WiL"/>
-                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="ozD-FQ-3Jh" secondAttribute="bottom" id="MiZ-t1-OkE"/>
+                            <constraint firstItem="ozD-FQ-3Jh" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" constant="8" id="IOc-D5-hyC"/>
+                            <constraint firstAttribute="trailing" secondItem="ozD-FQ-3Jh" secondAttribute="trailing" constant="8" id="Lhf-O0-WiL"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="ozD-FQ-3Jh" secondAttribute="bottom" constant="-300" id="MiZ-t1-OkE"/>
+                            <constraint firstItem="YnE-fu-EhY" firstAttribute="centerX" secondItem="eAY-AY-EEX" secondAttribute="centerX" id="hi2-wQ-oLQ"/>
+                            <constraint firstItem="YnE-fu-EhY" firstAttribute="top" secondItem="eAY-AY-EEX" secondAttribute="bottom" constant="62" id="waU-f8-QGX"/>
                             <constraint firstItem="eAY-AY-EEX" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="xj2-Zh-XI0"/>
                         </constraints>
                     </view>
